--- a/v2/src/globals.css
+++ b/v2/src/globals.css
@@ -2,18 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+html {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+[data-theme="dark"] {
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 35, 0, 41;
+  --background-end-rgb: 0, 0, 0;
 }
 
 body {
