style: make header stick to top

--- a/v2/globals.css
+++ b/v2/globals.css
@@ -4,24 +4,17 @@
 
 html {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-rgb: 255, 255, 255;
 }
 
 [data-theme="dark"] {
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 35, 0, 41;
-  --background-end-rgb: 0, 0, 0;
+  --background-rgb: 35, 0, 41;
 }
 
-body {
+html {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(var(--background-rgb));
 }
 
 @layer utilities {
