--- a/v2/globals.css
+++ b/v2/globals.css
@@ -22,3 +22,15 @@ html {
     text-wrap: balance;
   }
 }
+
+.squiggle {
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
+  animation: draw 2s linear infinite alternate;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
